fix: Align arrow-board to the top to fix arrows

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,6 +209,8 @@ small {
 
 #arrow-board {
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: 1;
 
   pointer-events: none;
